# example_beautifulsoup_and_scrapy

./: .gitignore  LICENSE  README.md  authentication.py  authors.json  config.ini  main.py  main_bs4.py  main_bs4_htmlparser.py  pyproject.toml  qoutes.json  test.py
author_quotes/: scrapy.cfg
author_quotes/author_quotes/: items.py  middlewares.py  pipelines.py  settings.py
author_quotes/author_quotes/spiders/: get_authors.py  get_quotes.py
database/: connect.py  models.py  seed.py
jsons_files/: authors.json  quotes.json
selenium/: spider.py
