[tool.poetry]
name = "example-beautifulsoup-and-scrapy"
version = "0.1.0"
description = ""
authors = ["Denys Tantsiura <ghost0002501@gmail.com>"]
readme = "README.md"
packages = [{include = "example_beautifulsoup_and_scrapy"}]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.9.2"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
scrapy = "^2.8.0"
pymongo = "^4.3.3"
mongoengine = "^0.27.0"
selenium = "^4.8.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
black = {extras = ["d"], version = "^23.1.0"}
flake8 = "^6.0.0"

[tool.black]
line-length = 119
skip-string-normalization = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
